--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/healthcare.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View project</a></li>
+									<li><a href="https://github.com/oyinloluwa-praise/Healthcare_Analytics_powerBI" class="button large">View project</a></li>
 								</ul>
 							</article>
 
@@ -67,7 +67,7 @@
 									<p>I used SQL to perform in-depth analysis on a COVID-19 dataset, calculating the Percent Population Vaccinated using Window Functions for cumulative sums. 
 										This query is the core of my data exploration, combining deaths and vaccinations tables to reveal key population health metrics.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button">View project</a></li>
+									<li><a href="https://github.com/oyinloluwa-praise/sql-exploration-project" class="button">View project</a></li>
 								</ul>
 							</article>
 								<article>
@@ -83,24 +83,24 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Employee Attendance<br /> </a></h2>
+										<h2><a href="https://github.com/oyinloluwa-praise/Optimizing-workforce-management-through-attendance-Analytics-Excel-">Employee Attendance<br /> </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/emp.png" alt="" /></a>
 									<p>I initiated this project by leveraging ChatGPT to generate a raw employee attendance dataset, which I cleaned and structured to ensure data integrity and accuracy.
 										 The Dashboard provides an insightful overview of the attendance status and departmental punctuality, delivering clear, actionable insights for management and HR. <br></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/oyinloluwa-praise/Optimizing-workforce-management-through-attendance-Analytics-Excel-" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Marketing Project</a></h2>
+										<h2><a href="https://github.com/oyinloluwa-praise/Marketing-Sales-Analytics-PowerBI">Marketing Project</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/ma.png" alt="" /></a>
 									<p>This detailed Marketing Analysis dashboard tracks a $2.42M Ad Spend to measure ROI and Conversions across channels and products, providing deep insights into performance.
 										 Explore the daily trends, highest-earning products, and the specific marketing channels driving revenue and conversion spikes for strategic optimization.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/oyinloluwa-praise/Marketing-Sales-Analytics-PowerBI" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -279,4 +279,5 @@
 			<script src="assets/js/thank you.js"></script>
 
 	</body>
+
 </html>
