--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Healthcare Analysis<br />
+									<h2><a href="https://github.com/oyinloluwa-praise/Healthcare_Analytics_powerBI">Healthcare Analysis<br />
 								</a></h2>
 									<p>This comprehensive Power BI Healthcare Analytics Dashboard showcases my data skills, from cleaning raw healthcare data to impactful visualization. It synthesizes key metrics like 55K Admissions and Average Length of Stay (LOS) while revealing a 47.58% decline in admissions between 2019 and 2024.
 										 The analysis provides deep insights into patient demographics, insurance providers, and medication usage, essential for strategic planning in the medical sector.
@@ -61,7 +61,7 @@
 							<section class="posts">
 								<article>
 								<header>
-									<h2><a href="#">SQL EXPLORATION PROJECT<br />
+									<h2><a href="https://github.com/oyinloluwa-praise/sql-exploration-project">SQL EXPLORATION PROJECT<br />
 								</a></h2> </header>
 								<a href="#" class="image fit"><img src="images/sql 2.png" alt="" /></a>
 									<p>I used SQL to perform in-depth analysis on a COVID-19 dataset, calculating the Percent Population Vaccinated using Window Functions for cumulative sums. 
@@ -105,13 +105,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Spotify Overview<br /> </a></h2>
+										<h2><a href="https://github.com/oyinloluwa-praise/-Spotify-User-Behavior-Analysis-Dashboard">Spotify Overview<br /> </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/spotify.png" alt="" /></a>
 									<p>This detailed Power BI Spotify Overview, built using a Kaggle dataset of 5350 users, segments users by subscription type and gender. 
 										Dive in to analyze the crucial relationship between the songs played per day and the users' total listening time, revealing engagement patterns.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/oyinloluwa-praise/-Spotify-User-Behavior-Analysis-Dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -281,3 +281,4 @@
 	</body>
 
 </html>
+
